Services updated, central manager completed

--- a/CMS.Services/CMS.Services.csproj
+++ b/CMS.Services/CMS.Services.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CMS.Data\CMS.Data.csproj" />
     <ProjectReference Include="..\CMS.Entities\CMS.Entities.csproj" />
     <ProjectReference Include="..\CMS.Shared\CMS.Shared.csproj" />
   </ItemGroup>
