--- a/CMS.Mvc/CMS.Mvc.csproj
+++ b/CMS.Mvc/CMS.Mvc.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Views\Edit\" />
+    <Folder Include="Areas\Account\Models\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
